--- a/client/assets/css/dashboard.css
+++ b/client/assets/css/dashboard.css
@@ -1,35 +1,45 @@
-/* ===== 主内容区 ===== */
-.main-content {
+/*===== 主内容区 ===== */
+ .main-content {
     width: 100%;
+    padding: 20px;
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
 /* ===== 仪表盘布局 ===== */
-.dashboard-container {
+.dashboard-container-financial {
     flex: 1;
-    padding: 30px;
+    padding: 5px;
     overflow-y: auto;
     height: calc(100vh - 70px);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    
 }
 
 .financial-dashboard {
-    width: 100%;
+   /* width: 100%;
     max-width: 900px;
     background-color: var(--white);
     border-radius: 24px;
     box-shadow: 0 12px 40px rgba(0, 0, 0, 0.08);
     overflow: hidden;
-    padding: 30px;
+    padding: 30px; */
+    flex: 1;
+    min-width: 300px;
+    background-color: white;
+    border-radius: 24px;
+    box-shadow: 0 12px 40px rgba(0, 0, 0, 0.08);
+    overflow: hidden;
+    padding: 20px 25px 15px;/* 减小上下内边距 */
+    margin-top: 5px; 
 }
 
 .financial-header {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .financial-header h1 {
