--- a/client/assets/css/tmp2.css
+++ b/client/assets/css/tmp2.css
@@ -35,7 +35,17 @@
     display: flex;
     gap: 20px;
 }
-
+.dashboard-section-total {
+    flex: 1;
+    min-width: 300px;
+    background-color: white; 
+    border-radius: 24px;
+    box-shadow: 0 12px 40px rgba(0, 0, 0, 0.08); 
+    overflow:hidden; 
+    padding: 30px;
+    height: 840px;
+    margin-top: 15px;
+}
 .dashboard-section {
     flex: 1;
     min-width: 300px;
@@ -83,6 +93,7 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.03);
             padding: 25px;
             margin-bottom: 25px;
+            /* height: 400px; */
         }
         
         .panel:last-child {
